@@ -1,3 +1,4 @@
+12/17/13 Custom: fix layout problems that were introduced by changes to Basics
 12/17/13 lint fix
 12/17/13 delete vestigial option.labelNeutral from PHScaleNode
 12/17/13 emphasize the '7' tick mark more on the pH scale by using 'Arial black' font family
